# teleos

./: .gitignore  LICENSE  PRD.md  README.rst  ROADMAP.md  pyproject.toml  run-tests.ps1
.continue/agents/: new-config.yaml
bindings/cpp/: teleos.hpp  test.cpp
bindings/csharp/Teleos/: Engine.cs
bindings/csharp/TeleosTest/: Program.cs  TeleosTest.csproj
bindings/go/: go.mod
bindings/go/teleos/: teleos.go  teleos_test.go
bindings/java/: pom.xml
bindings/java/src/main/java/io/teleos/: Engine.java  TeleosFact.java  TeleosFacts.java  TeleosRule.java  TeleosRules.java
bindings/java/src/test/java/io/teleos/: EngineTest.java
bindings/js/: package-lock.json  package.json  test.cjs  tsconfig.json
bindings/js/src/: index.ts
examples/: access.teleos  animals.teleos  base-people.teleos  food.teleos  grades.teleos  import-demo.teleos
playground/: playground.html  playground.py
teleos/: __init__.py  __main__.py  api.py  cli.py  engine.py  parser.py
teleos-core/: Cargo.toml  teleos_core.h
teleos-core/src/: engine.rs  lib.rs  main.rs  parser.rs  wasm.rs
tests/: test_teleos.py
vscode-teleos/: README.md  language-configuration.json  package.json  teleos-0.1.0.vsix
vscode-teleos/snippets/: teleos.json
vscode-teleos/syntaxes/: teleos.tmLanguage.json
