[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-teleos"
version = "0.1.1"
description = "Plain-language logic engine"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["logic", "rules", "inference", "expert-system", "business-rules"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jaysyrk/teleos"
Repository = "https://github.com/jaysyrk/teleos"
Issues = "https://github.com/jaysyrk/teleos/issues"

[tool.setuptools]
packages = ["teleos"]

[project.scripts]
teleos = "teleos.cli:main"
